==> MikroElektronika/mikrosdk_v2/sdk/targets/avr_8bit/mikroe/avr/src/i2c/implementation_2/hal_ll_i2c_master.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address (( hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define HAL_LL_I2C_DEFAULT_PASS_COUNT    (10000)
#define HAL_LL_I2C_MASTER_SPEED_100K     (100000UL)
#define HAL_LL_I2C_MASTER_SPEED_400K     (400000UL)
#define HAL_LL_I2C_CTRLA_MASTER_ENABLE   (3)
#define HAL_LL_I2C_CTRLC_ACKACT_NACK     (0x4)
#define HAL_LL_I2C_CTRLC_CMD_STOP        (0x3)
#define HAL_LL_I2C_CTRLC_CMD_RESTART     (0x1)
#define HAL_LL_I2C_CTRLC_CMD_BYTEREC     (0x2)
#define HAL_LL_I2C_MASTER_STATUS_RIF      (7)
#define HAL_LL_I2C_MASTER_STATUS_WIF      (6)
#define HAL_LL_I2C_MASTER_STATUS_IDLE     (1)
#define HAL_LL_I2C_MASTER_STATUS_BUS_MASK (0x3)
#define HAL_LL_I2C_SLAVE_ENABLE           (false)

static uint8_t hal_ll_i2c_master_is_idle( const hal_ll_i2c_base_handle_t *base ) {
    return (( read_reg( base->master.status ) & HAL_LL_I2C_MASTER_STATUS_BUS_MASK ) == HAL_LL_I2C_MASTER_STATUS_IDLE );
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;

    write_reg( hal_ll_hw_reg->master.addr, ( map->address ) << 1 | 1 );

    // RIF is set when a byte is successfully received in master read mode.
    while( !( check_reg_bit( hal_ll_hw_reg->master.status, HAL_LL_I2C_MASTER_STATUS_RIF ))) { // RIF
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_READ;
        }
    }

    for( int i = 0; i < len_read_data; i++ ) {
        read_data_buf[i] = read_reg( hal_ll_hw_reg->master.dat );
        if( i != len_read_data - 1 ) {
            write_reg( hal_ll_hw_reg->master.ctrlc, HAL_LL_I2C_CTRLC_CMD_BYTEREC ); // Send ACK
            // RIF is set when a byte is successfully received in master read mode.
            while( !( check_reg_bit( hal_ll_hw_reg->master.status, HAL_LL_I2C_MASTER_STATUS_RIF ))) { // RIF
                if ( map->timeout ) {
                    if ( !time_counter-- )
                        return HAL_LL_I2C_MASTER_TIMEOUT_READ;
                }
            }
        } else {
            write_reg( hal_ll_hw_reg->master.ctrlc, ( HAL_LL_I2C_CTRLC_ACKACT_NACK | HAL_LL_I2C_CTRLC_CMD_STOP )); // Send NACK
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;

    while( !( hal_ll_i2c_master_is_idle( hal_ll_hw_reg ))) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    write_reg( hal_ll_hw_reg->master.addr, ( map->address ) << 1 );
    // WIF is cleared automatically when writing to ADDR and DATA register.
    while( !( check_reg_bit( hal_ll_hw_reg->master.status, HAL_LL_I2C_MASTER_STATUS_WIF ))) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
        }
    }

    for( int i = 0; i < len_write_data; i++ ) {
        write_reg( hal_ll_hw_reg->master.dat, write_data_buf[i] );
        // WIF is cleared automatically when writing to ADDR and DATA register.
        while( !( check_reg_bit( hal_ll_hw_reg->master.status, HAL_LL_I2C_MASTER_STATUS_WIF ))) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
    }
    if( HAL_LL_I2C_MASTER_END_MODE_STOP == mode )
        write_reg( hal_ll_hw_reg->master.ctrlc, HAL_LL_I2C_CTRLC_CMD_STOP );
    else if ( HAL_LL_I2C_MASTER_WRITE_THEN_READ == mode )
        write_reg( hal_ll_hw_reg->master.ctrlc, HAL_LL_I2C_CTRLC_CMD_RESTART );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_i2c_master_check_pins( hal_ll_pin_name_t scl, hal_ll_pin_name_t sda, hal_ll_i2c_pins_t *index_list, hal_ll_i2c_master_handle_register_t *handle_map ) {
    static const uint16_t scl_map_size = ( sizeof( hal_ll_i2c_scl_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    static const uint16_t sda_map_size = ( sizeof( hal_ll_i2c_sda_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    uint8_t hal_ll_module_id = 0;
    uint8_t index_counter = 0;
    uint8_t scl_index;
    uint8_t sda_index;

    if (( HAL_LL_PIN_NC == scl ) || ( HAL_LL_PIN_NC == sda )) {
        return HAL_LL_PIN_NC;
    }

    for ( scl_index = 0; scl_index < scl_map_size; scl_index++ ) {
        if ( hal_ll_i2c_scl_map[ scl_index ].pin == scl ) {
            for ( sda_index = 0; sda_index < sda_map_size; sda_index++ ) {
                if ( hal_ll_i2c_sda_map[ sda_index ].pin == sda ) {
                    if ( hal_ll_i2c_scl_map[ scl_index ].module_index == hal_ll_i2c_sda_map[ sda_index ].module_index ) {
                        // Get module number
                        hal_ll_module_id = hal_ll_i2c_scl_map[ scl_index ].module_index;
                        // Map pin names
                        index_list[hal_ll_module_id]->pin_scl = scl_index;
                        index_list[hal_ll_module_id]->pin_sda = sda_index;

                        // Check if module is taken
                        if ( NULL == handle_map[hal_ll_module_id].hal_drv_i2c_master_handle ) {
                            return hal_ll_module_id;
                        } else if ( I2C_MODULE_COUNT == ++index_counter ) {
                            return --index_counter;
                        }
                    }
                }
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_i2c_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);

    // The BAUD register should only be written while master is disabled.
    hal_ll_i2c_master_set_bit_rate( map );

    // Enable TWI Master
    set_reg_bit( hal_ll_hw_reg->master.ctrla, HAL_LL_I2C_CTRLA_MASTER_ENABLE );

    // Force IDLE state
    write_reg( hal_ll_hw_reg->master.status, HAL_LL_I2C_MASTER_STATUS_IDLE );
}
