==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic18/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_odcon_map.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address (( hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle  (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define pin_mask 0x0F
#define port_mask 0xF0
#define hal_ll_pin(port_name) (port_name & pin_mask)
#define hal_ll_port(port_name) ((port_name & port_mask) >> 4)
#define hal_ll_i2c_check_speed(_speed) (((Get_Fosc_kHz()*1000/_speed)/4)-1)
#define HAL_LL_I2C_MAX_SPEED_VALUE 0xFFU
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K 400000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT 10000
#define HAL_LL_SSPXCON1_SETUP 0x38U
#define HAL_LL_I2C_IDLE_MASK 0x1FU
#define HAL_LL_SSPSTAT_R_NOT_W_BIT 2
#define HAL_LL_SSPSTAT_CKE_BIT 6
#define HAL_LL_SSPSTAT_SMP_BIT 7
#define HAL_LL_SSPCON2_SEN_BIT 0
#define HAL_LL_SSPCON2_RSEN_BIT 1
#define HAL_LL_SSPCON2_PEN_BIT 2
#define HAL_LL_SSPCON2_RCEN_BIT 3
#define HAL_LL_SSPCON2_ACKEN_BIT 4

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    size_t transfer_counter = NULL;
    uint16_t time_counter = map->timeout;
    uint8_t status = NULL;

    if( mode != HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        status = hal_ll_i2c_master_start( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }

    clear_reg_bit( hal_ll_hw_reg->pir_reg_addr , hal_ll_i2c_sspif[ map->module_index ] );
    write_reg( hal_ll_hw_reg->sspbuf_reg_addr, ( ( map->address << 1 ) | 1 ) );

    status = hal_ll_i2c_master_check_write( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++ ) {

        clear_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] );
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_RCEN_BIT );

        // Wait for interrupt flag.
        while ( !check_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        read_data_buf[transfer_counter] = read_reg( hal_ll_hw_reg->sspbuf_reg_addr );

        if ( transfer_counter < ( len_read_data - 1 ) ) {
            clear_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKDT_BIT );
        } else {
            set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKDT_BIT );
        }

        clear_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] );
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKEN_BIT );

        time_counter = map->timeout;
        while ( !check_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }
    }

    set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr , HAL_LL_SSPCON2_PEN_BIT );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    size_t transfer_counter = NULL;
    uint8_t status = NULL;

    status = hal_ll_i2c_master_start( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    clear_reg_bit( hal_ll_hw_reg->pir_reg_addr , hal_ll_i2c_sspif[ map->module_index ]);
    write_reg( hal_ll_hw_reg->sspbuf_reg_addr, ( map->address << 1 ) );

    status = hal_ll_i2c_master_check_write( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_write_data; transfer_counter++ )
    {
        write_reg( hal_ll_hw_reg->sspbuf_reg_addr, write_data_buf[ transfer_counter ] );

        status = hal_ll_i2c_master_check_write( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }

    if ( ( mode == HAL_LL_I2C_MASTER_END_MODE_RESTART ) || ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) ) {
        status = hal_ll_i2c_master_restart( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    } else if ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) {
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr , HAL_LL_SSPCON2_PEN_BIT );
    }

    if ( !check_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKSTAT_BIT ) ) {
        return HAL_LL_I2C_MASTER_SUCCESS;
    } else {
        return HAL_LL_I2C_MASTER_ERROR;
    }
}

static bool hal_ll_i2c_master_is_idle( const hal_ll_i2c_base_handle_t *hal_ll_hw_reg ) {
    if ( !check_reg_bit( hal_ll_hw_reg->sspstat_reg_addr, HAL_LL_SSPSTAT_R_NOT_W_BIT ) ) {
        if ( !( read_reg( hal_ll_hw_reg->sspcon2_reg_addr ) & HAL_LL_I2C_IDLE_MASK ) ) {
            return HAL_LL_I2C_MASTER_TIMEOUT_WAIT_IDLE;
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_i2c_master_check_pins( hal_ll_pin_name_t scl, hal_ll_pin_name_t sda, uint8_t *index_list ) {
    static uint16_t scl_map_size = ( sizeof( hal_ll_i2c_scl_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    static uint16_t sda_map_size = ( sizeof( hal_ll_i2c_sda_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    uint8_t scl_index;
    uint8_t sda_index;

    for ( scl_index = 0; scl_index < scl_map_size; scl_index++ ) {
        if ( hal_ll_i2c_scl_map[ scl_index ]->pin == scl ) {
            for ( sda_index = 0; sda_index < sda_map_size; sda_index++ ) {
                if ( hal_ll_i2c_sda_map[ sda_index ]->pin == sda ) {
                    if ( hal_ll_i2c_scl_map[ scl_index ]->module_index == hal_ll_i2c_sda_map[ sda_index ]->module_index ) {
                        // Map pin names
                        index_list[HAL_LL_I2C_SCL_PIN] = scl_index;
                        index_list[HAL_LL_I2C_SDA_PIN] = sda_index;
                        return hal_ll_i2c_scl_map[ scl_index ]->module_index;
                    }
                }
            }
        }
    }

    return  HAL_LL_PIN_NC;
}

static void hal_ll_i2c_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_hw_set_module_power( map, true );

    hal_ll_i2c_hw_errata_silicon_fix( map );

    hal_ll_i2c_hw_odcon_set( map );

    hal_ll_i2c_hw_init( map );
}
